[package]
categories = ["game-development", "game-engines", "games", "graphics", "multimedia"]
description = "Wolf is a set of modules for realtime rendering, realtime streaming and game developing"
edition = "2021"
keywords = ["gamedev", "system", "gamedev", "render"]
license = "Apache-2.0"
name = "wolf_rs"
readme = "README.md"
repository = "https://github.com/WolfEngine/WolfEngine/"
version = "3.0.0"

[lib]
crate-type = ["staticlib"]
name = "wolf_rs"
path = "src/lib.rs"

# before adding any dependency please check it out from
# https://android.googlesource.com/platform/external/rust/crates/

# shared dependencies between all
[dependencies]
cxx = { version = "1.0.83" }
# thiserror = {version = "1.0.37", default-features = false}

# shared dependencies between arm, aarch64 & x86_64
[target.'cfg(any(target_arch = "arm", target_arch = "aarch64", target_arch = "x86_64"))'.dependencies]
# pollster = {version = "0.2.5", default-features = false}
# tonic = {version = "0.8.3", default-features = false, features = ["codegen", "prost", "tls", "gzip"], optional = true}

# dependencies of arm, aarch64
# [target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]

# dependencies of x86_64
[target.'cfg(target_arch = "x86_64")'.dependencies]
# async-raft = {version = "0.6.1", default-features = false, optional = true}
# async-trait = {version = "0.1.59", default-features = false}
# futures = { version = "0.3.25", default-features = false }
# memstore = {version = "0.2.0", default-features = false}
# mimalloc = {version = "0.1.32", default-features = false, features = ["secure"]}
# parking_lot = {version = "0.12.1",  default-features = false, features = ["deadlock_detection"]}
# prost = {version = "0.11.3", default-features = false, optional = true}

[build-dependencies]
cxx-build = { version = "1.0.83" }
# tonic-build = {version = "0.8.4", default-features = false, features = ["transport", "prost"]}

#[dev-dependencies]

# features
[features]
# all = [
#     "grpc",
#     "raft"
# ]
default = []
#grpc = ["tonic", "prost"] # enable gRPC (http2/1.1) for stream module
#raft = ["async-raft", "prost"] # enable raft algorithm for system module

# brotli = [] # enable brotli compression
# kafka_client = [] # enable Kafka client
# quic = [] # enable QUIC protocol
# rocksDB_client = [] # enable rocksDB client


