[package]
categories = ["api-bindings"]
description = "A rust bindgens over luaJIT for WolfEngine"
edition = "2021"
keywords = ["ffi", "api"]
license = "https://github.com/LuaJIT/LuaJIT/blob/v2.1/COPYRIGHT"
name = "luajit"
readme = "https://github.com/LuaJIT/LuaJIT/blob/v2.1/README"
repository = "https://github.com/WolfEngine/WolfEngine/"
version = "0.1.0"

[lib]
name = "luajit"
path = "src/lib.rs"

[features]
default = []

[build-dependencies]
wolf_build = { version = "3.0.0", path = "../../wolf_build" }